[tool.poetry]
authors = ["Mauro Insacco <mauro.insacco@gmail.com>"]
description = "Feature Store un po'scemo"
name = "figo"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.batch.dependencies]
modin = {extras = ["ray"], version = "^0.18.0"}
pandas = "^1.5.2"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
mypy = "*"
pytest = "*"
pytest-asyncio = "*"
ruff = "*"
httpx = "^0.23.3"


[tool.poetry.group.web.dependencies]
fastapi = {extras = ["standard"], version = "^0.89.1"}
uvicorn = "^0.20.0"

[tool.black]
line-length = 88

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["E501"]

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
implicit_reexport = true
pretty = true
show_error_codes = true
show_error_context = true
strict = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
