[tool.poetry]
authors = ["Mauro Insacco <mauro.insacco@gmail.com>"]
description = "A library for defining and resolving a DAG of features in python"
name = "trippa"
version = "0.0.1"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
mypy = "*"
pytest = "*"
pytest-asyncio = "*"
ruff = "*"
pdoc = "^13.1.0"

[tool.black]
line-length = 88

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["E501"]

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
implicit_reexport = true
pretty = true
show_error_codes = true
show_error_context = true
strict = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
disable_error_code = 'type-arg, empty-body'

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
